Fixed issue with horizontal scroll

--- a/sass/projects/ux-design-contest.sass
+++ b/sass/projects/ux-design-contest.sass
@@ -50,6 +50,10 @@ a
     color: #00A8FF
     text-decoration: none
 
+// Bootstrap's negative margins on .row creates horizontal scrollbar, yuck!!
+.row
+  margin: 0
+
 .subtle
   color: #7F7F7F
   &:hover,
@@ -236,7 +240,7 @@ a
   .max-w-200
     max-width: 100px
   .max-w-640
-    min-width: 365px
+    min-width: 330px
   .mg-b-75
     margin-bottom: 2rem
   .wrapper-right-circle-small
